# Organizer-and-pdf-merger

./: .gitignore  AI_Automation_Suite.exe - Shortcut.lnk  GITHUB_SETUP_GUIDE.md  INSTALLER_InnoSetup.iss  INSTALLER_MSIX.md  LICENSE  PLAN.txt  README.md  RELEASE_v1.0.0.md  UPDATE_STRATEGY.md  checksums_v1.0.0.txt  pyproject.toml  pytest.ini  requirements.txt  run_debug.bat  test_webview.py
.github/workflows/: release.yml
Test Files/: Gorry Computer Ledger (18-07-2025).rpt  Import Duty_Tax Payment Alert.eml  MAY JUN SOA.xlsx  MAY, JUNE RGH and Ramidos Differences.xlsx  RGH SOA (Ramidos).csv
Test Files/991 Royle M G A/: desktop.ini
Test Files/9958 Zein Marine/: desktop.ini
Test Files/Agents Invoice/: Agents Invoice Pending List.xlsx  ~$Agents Invoice Pending List.xlsx
Test Files/Audit Report 2024/: 1. Why Depreciation not charged.docx  2. Bank Reconsilation Statement.xlsx  3. Main Treasury.xlsx  4. Cash in Hand Confirmatio Certificate.docx  8. Quaterly VAT Workings (1).xlsx  9. Direct Expenses and Revenue.rar  ADCB Bank Transaction.xlsx  Abu Dhabi Commercial Bank 2.xls  Abu Dhabi Commercial Bank.xls  (+11 more)
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build_exe.bat  build_exe.ps1  build_exe.sh  build_frontend.ps1  build_onefile_exe.ps1  build_release.ps1  install_requirements.ps1  run_backend.ps1
src/: app.py  test_minimal.py  updater.py  version.py  webview_bootstrap.py  webview_test.py
tests/: test_api_backend.py  test_file_naming.py  test_file_naming_extra.py  test_folder_organizer.py  test_pdf_organizer.py
(+30 files in other folders)
